--- a/bower.json
+++ b/bower.json
@@ -4,8 +4,8 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
     "contact-list": "igoodbad/contact-list",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#2.1.0",
-    "login-signin": "igoodbad/login-signin"
+    "login-signin": "igoodbad/login-signin",
+    "local-traslate": "igoodbad/local-traslate"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
